# geometry_storage

./: CMakeLists.txt
src/: main.cpp
src/Calculator/: AreaCalculator.cpp  AreaCalculator.h  Calculator.cpp  Calculator.h  PerimeterCalculator.cpp  PerimeterCalculator.h
src/DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h
src/Factory/: ShapeFactory.cpp  ShapeFactory.h
src/Random/: RandomGenerator.cpp  RandomGenerator.h
src/ShapeType/: ShapeType.cpp  ShapeType.h
src/Shapes/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeType.h  Triangle.cpp  Triangle.h
